<resources>
    <string name="app_name">慧学</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_theme">AddThemeActivity</string>


    <string name="theme">主题：</string>
    <string name="themeContent">内容：</string>

    <string name="messageTitle">我的消息</string>
    <string name="myQuestion">我的提问</string>
    <string name="videoTitle">视频信息</string>
    <string name="loginUserName">用户名：</string>
    <string name="pleaseInputUserName">请输入用户名</string>
    <string name="loginpwd">密    码:</string>
    <string name="pleaseInputPwd">请输入密码</string>
    <string name="rememberPwd">记住密码</string>
    <string name="autoLogin">自动登陆</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>

</resources>
