<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:orientation="vertical">

        <include
            layout="@layout/init_head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/corners_bg"
                android:orientation="vertical"
                android:padding="10dp"
                android:showDividers="middle">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loginUserName"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/pleaseInputUserName"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loginpwd"
                        android:textSize="18dp" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/pleaseInputPwd"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:maxLines="1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkboxpw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rememberPwd" />

                    <CheckBox
                        android:id="@+id/checkboxlg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/autoLogin" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="#f37f0e"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="30dp"
                        android:background="#f37f0e"
                        android:gravity="center"
                        android:text="@string/regist"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
